[package]
name = "reapi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bson = "2.4.0"
chrono = "0.4.22"
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.85"
reqwest = "0.11.12"
tokio = { version = "1.21.2", features = ["full"] }
tl = "0.7.7"
actix-web = "4.2.1"
